// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<CloseButton /> > has expected classes 1`] = `"rounded-md focus-ring cursor-pointer"`;

exports[`<CloseButton /> > has expected classes 2`] = `"rounded-md focus-ring cursor-pointer opacity-50 highlight:opacity-80 transition-opacity"`;

exports[`<CloseButton /> > has icon with expected size 1`] = `
<svg
  aria-hidden="true"
  class="svg-inline--fa fa-xmark "
  data-icon="xmark"
  data-prefix="fas"
  focusable="false"
  role="img"
  viewBox="0 0 384 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
    fill="currentColor"
  />
</svg>
`;

exports[`<CloseButton /> > has icon with expected size 2`] = `
<svg
  aria-hidden="true"
  class="svg-inline--fa fa-xmark fa-lg "
  data-icon="xmark"
  data-prefix="fas"
  focusable="false"
  role="img"
  viewBox="0 0 384 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
    fill="currentColor"
  />
</svg>
`;

exports[`<CloseButton /> > has icon with expected size 3`] = `
<svg
  aria-hidden="true"
  class="svg-inline--fa fa-xmark fa-xl "
  data-icon="xmark"
  data-prefix="fas"
  focusable="false"
  role="img"
  viewBox="0 0 384 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
    fill="currentColor"
  />
</svg>
`;
